--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_maps: ^6.2.0
+  firebase_auth: ^3.6.4
+  firebase_database: ^9.1.2
+  google_maps_webservice: ^0.0.19
+  http: ^0.13.5
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
